stylesheets/style.css
.shell{
  height:100%;
  width:100%;
  background-color:white;
}

.container{
  max-width:1100px;
  min-width:1100px;
  height:600px;
  background-color:white;
  position: absolute;
	top: 50%;
  left:50%;
  margin: -300px 0 0 -550px;
}

.cv{
  max-width:640px;
  min-width:640px;
  height:1000px;
  margin: 0 auto;
  margin-top:800px;
  position: relative;
  background-color:white;
  text-align:left;
}

.cvtext{
  position:relative;
  left:330px;
  top:200px;
}

p.active{
  font-weight:600;
}

a{
  text-decoration: none;
  color:inherit;
}

a:hover{
  font-weight:600;
}

.nav{
  position:fixed;
  top:10px;
  left:20px;
  font-size:14px;
  text-align: left;
  z-index:10;
}

.left-rail{
  width: 40%;
   float:left;
}

.right-rail{
  width:45%; 
  float:left;
  margin-top:180px;
  margin-left: 120px;
}

.profile{
  height:100%;
}

body{
  font-family: 'Lato', Arial, Helvetica, sans-serif;
  font-size:20px;
  font-weight:300;
}

.header{
  font-size:48px;
}

.icon{
  color:#b3b3b3;
  padding-right:20px; 
  padding-top:10px;
}

.icon:hover{
  color:#737373;
  padding-right:20px; 
  padding-top:10px;
}


p.sub{
  font-size:16px;
}

p.cvsub{
  font-size:16px;

}

p.cvheader{
  padding-top:30px;
  font-weight:600;
  font-size: 20px;
}

@media screen and (max-width: 480px) {
    .profile {
      display:none;
    }
    .right-rail{
      margin-left:50px;
      width: 80%;
      margin-top:100px;
    }
    .shell{
      max-width:100%;
      background-color:white;
      width:100%;
      height:70%;
    }
    .container{
      width:100%;
      min-width:100%;
      margin:0;
      position:absolute;
      left:0;
      top:100px;
      height:400px;
    }
    .cv{
      max-width:100%;
      min-width:100%;
      height:100%;
      padding-top:100px;
      margin-top:100px;
      text-align:center;
    }
    .cvtext{
      position:relative;
      left:0px;
      top:0;
    }
} 

